[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PYB11Generator"
authors = [{name = "J. Michael Owen", email="mikeowen@llnl.gov"}]
description = "PYB11Generator is a code generation tool which generates pybind11 code for binding C++ to Python. Documentation is available at https://pyb11generator.readthedocs.io/"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
dependencies = ["pybind11>3.0.0"]
#dynamic = ["version"]
version = "2025.11.0"

[project.urls]
"Homepage" = "https://github.com/LLNL/PYB11Generator"
"Bug Tracker" = "https://github.com/LLNL/PYB11Generator/issues"

[tool.setuptools.package-dir]
"PYB11Generator" = "PYB11Generator"
